cabal-version:      2.4
name:               cardano-cli-balance-fixer
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jonathan Fischoff
maintainer:         jonathan@canonicalllc.com
license: MIT

-- A copyright notice.
copyright: Copyright 2021 Canonicall LLC
-- category:
extra-source-files: CHANGELOG.md

executable cardano-cli-balance-fixer
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: RecordWildCards
                      , LambdaCase

    build-depends: base ^>=4.14.3.0
                 , optparse-applicative
                 , process
                 , containers
                 , split
                 , aeson
                 , bytestring
    hs-source-dirs:   app
    default-language: Haskell2010
